# fuzzyfinder

./: CMakeLists.txt  README.md
fuzzysearch/: bitonic_sort.c  bitonic_sort.h  damarau_levenshtein.c  damarau_levenshtein.h  fuzzy.c  fuzzy.h  fuzzysearch.h
util/: error_handling.c  error_handling.h  util.h  wrapper.c  wrapper.h
